# python-project-template

./: .buildinfo  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  README.md  api.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yaml  publish.yaml  unit-tests.yaml
docs/: api.rst  conf.py  index.md  installation.md
