[project]
name = "my-package"
dynamic = ["version"]
description = "A short description of my-package"
authors = [
    { name = "Author Name", email = "author@example.com" },
]
requires-python = ">=3.11,<3.15"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mypackage = ["py.typed"]

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}.post{ccount}+git.{sha}"

[build-system]
requires = ["setuptools>=77.0.3", "wheel", "setuptools-git-versioning>=2.0,<4"]
build-backend = "setuptools.build_meta"

[dependency-groups]
docs = [
    "sphinx>=8.0",
    "sphinx-rtd-theme",
    "myst-parser",
    "sphinx-autodoc-typehints",
    "linkify-it-py",
]
dev = [
    "pytest>=8.2,<10",
    "pytest-cov>=5.0",
    "prek>=0.1",
    "ty>=0.0.35"
]

[tool.uv]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["T201"]
extend-safe-fixes = ["C408"]
mccabe = { max-complexity = 18 }
select = ["B", "C", "E", "F", "I", "UP", "W", "B9"]
ignore = ["W605", "E203"]
per-file-ignores = { "**/__init__.py" = ["F401", "F403"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=mypackage --cov-report=xml"

[tool.coverage.run]
source = ["mypackage"]
relative_files = true


